# thermalwriter

./: CLAUDE.md  Cargo.toml  README.md
docs/plans/: 2026-03-23-display-benchmark-design.md  2026-03-23-display-benchmark-impl.md  2026-03-23-neon-dash-v2-design.md  2026-03-23-neon-dash-v2-impl.md  2026-03-23-rendering-pipeline-design.md  2026-03-23-svg-component-system-design.md  2026-03-23-svg-component-system-impl.md  2026-03-23-thermalrighter-design.md  2026-03-23-thermalrighter-impl.md  2026-03-24-xvfb-capture-design.md  2026-03-24-xvfb-capture-impl.md  2026-04-04-tauri-gui-design.md  2026-04-04-tauri-gui-impl.md
examples/: preview_blitz.rs  preview_layout.rs  render_layout.rs  send_test_frame.rs  test_display.rs
layouts/: blitz-glass.html  blitz-rings.html  dual-gauge.html  fps-hero.html  gpu-focus.html  minimal.html  neon-dash.html  system-stats.html
packaging/: install.sh
packaging/udev/: 99-thermalwriter-rapl.rules
skills/designing-layouts/: SKILL.md
skills/designing-layouts/references/: color-system.md  components.md  layout-patterns.md  rendering-engine.md
src/: cli.rs  config.rs  lib.rs  main.rs  theme.rs
src/render/: blitz.rs  draw.rs  frontmatter.rs  layout.rs  mod.rs  parser.rs  svg.rs  xvfb.rs
src/render/components/: animation.rs  background.rs  btop.rs  graph.rs  mod.rs
src/sensor/: amdgpu.rs  history.rs  hwmon.rs  mangohud.rs  mod.rs  nvidia.rs  rapl.rs  sysinfo_provider.rs
src/service/: dbus.rs  mod.rs  tick.rs  xvfb.rs
src/transport/: bulk_usb.rs  mod.rs
systemd/: thermalrighter.service  thermalwriter.service
tests/: animation_tests.rs  component_tests.rs  config_tests.rs  frontmatter_tests.rs  integration_tests.rs  render_tests.rs  sensor_history_tests.rs  sensor_tests.rs  theme_tests.rs  transport_tests.rs
