[package]
name = "thermalrighter"
version = "0.1.0"
edition = "2024"

[dependencies]
rusb = "0.9"
zbus = { version = "5", default-features = false, features = ["tokio"] }
tiny-skia = "0.11"
taffy = "0.7"
tera = "1"
fontdue = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
notify = "7"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
